--- a/index.html
+++ b/index.html
@@ -1,13 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eman Ahamed</title>
+
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet">
+
+    <title>Eman Ahamed</title>
 </head>
+
 <body>
-    
+    <section class="hero-section">
+        <div class="middle">
+            <h1>Welcome To</h1>
+            <h1><span>Eman's</span> World!</h1>
+            <h3>MEng Mathematical Computation Student @UCL</h3>
+            <p>Eman is a first-year student at University College London class of 2025, currently studying towards an
+                MEng
+                Mathematical Computation degree. A keen proponent of technology, Eman is looking to pursue a career in
+                the
+                EdTech and Fintech sectors, with a focus on Artificial Intelligence. He has notable experience in web
+                app
+                development. And is currently seeking internships and work experience opportunities in this space to
+                advance his
+                knowledge and understanding of the sector.</p>
+            <a class="button" href="https://uk.linkedin.com/in/emanahamed" target="_blank">HIRE ME</a>
+        </div>
+        <div>
+            <img src="images/HERO-IMAGE.png" alt="">
+        </div>
+    </section>
+
 </body>
+
 </html>
